--- a/vs/2010/libobs-opengl/libobs-opengl.vcxproj.filters
+++ b/vs/2010/libobs-opengl/libobs-opengl.vcxproj.filters
@@ -21,12 +21,18 @@
     <ClInclude Include="..\..\..\libobs-opengl\gl-exports.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="..\..\..\libobs-opengl\gl-helpers.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="..\..\..\libobs-opengl\gl-subsystem.c">
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="..\..\..\libobs-opengl\gl-windows.c">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\..\libobs-opengl\gl-texture2d.c">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
