added initial GL shader code

--- a/vs/2010/libobs-opengl/libobs-opengl.vcxproj.filters
+++ b/vs/2010/libobs-opengl/libobs-opengl.vcxproj.filters
@@ -47,5 +47,8 @@
     <ClCompile Include="..\..\..\libobs-opengl\gl-shaderparser.c">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="..\..\..\libobs-opengl\gl-shader.c">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
