added z-stencil buffers to GL and made a GS_MAX_TEXTURES macro

--- a/vs/2010/libobs-opengl/libobs-opengl.vcxproj
+++ b/vs/2010/libobs-opengl/libobs-opengl.vcxproj
@@ -168,6 +168,7 @@
     <ClCompile Include="..\..\..\libobs-opengl\gl-texture2d.c" />
     <ClCompile Include="..\..\..\libobs-opengl\gl-texturecube.c" />
     <ClCompile Include="..\..\..\libobs-opengl\gl-windows.c" />
+    <ClCompile Include="..\..\..\libobs-opengl\gl-zstencil.c" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
