finish up GL vertex buffer code

--- a/vs/2010/libobs-opengl/libobs-opengl.vcxproj
+++ b/vs/2010/libobs-opengl/libobs-opengl.vcxproj
@@ -168,6 +168,7 @@
     <ClCompile Include="..\..\..\libobs-opengl\gl-subsystem.c" />
     <ClCompile Include="..\..\..\libobs-opengl\gl-texture2d.c" />
     <ClCompile Include="..\..\..\libobs-opengl\gl-texturecube.c" />
+    <ClCompile Include="..\..\..\libobs-opengl\gl-vertexbuffer.c" />
     <ClCompile Include="..\..\..\libobs-opengl\gl-windows.c" />
     <ClCompile Include="..\..\..\libobs-opengl\gl-zstencil.c" />
   </ItemGroup>
