add GL index buffers and a few tweaks to the helper functions

--- a/vs/2010/libobs-opengl/libobs-opengl.vcxproj
+++ b/vs/2010/libobs-opengl/libobs-opengl.vcxproj
@@ -162,6 +162,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="..\..\..\libobs-opengl\gl-helpers.c" />
+    <ClCompile Include="..\..\..\libobs-opengl\gl-indexbuffer.c" />
     <ClCompile Include="..\..\..\libobs-opengl\gl-shader.c" />
     <ClCompile Include="..\..\..\libobs-opengl\gl-shaderparser.c" />
     <ClCompile Include="..\..\..\libobs-opengl\gl-stagesurf.c" />
